--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,12 +1,4 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title>
-      QR Code App
-    </ion-title>
-  </ion-navbar>
-</ion-header>
-
-<ion-content padding>
+<ion-content padding class="color">
   <ion-item>
     <ion-input type="text" placeholder="MY QR Code data" [(ngModel)]="qrData">
     </ion-input>
@@ -26,4 +18,5 @@
       Result from Scan: {{ scannedCode }}
     </ion-card-content>
   </ion-card>
+  <img src="../../assets/imgs/productos-zhumir-saborizados.png" alt="">
 </ion-content>
